# zed-copilot

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  extension.toml
.github/: CONTRIBUTING.md  performance-budget.json  pull_request_template.md
.github/scripts/: collect_test_metrics.py  generate_pr_comment.py
.github/workflows/: README.md  ci.yml
.serena/: project.yml
.serena/memories/: PR1-Chat-Panel-Scaffold-Complete.md  PR3-Phase4-Implementation-Complete.md  PR3-Phase4-LazyMockServer-Plan.md  Phase2_Execution_Complete.md  ci-fix-summary.md  code_comparison_before_after.md  docs_consolidation_complete.md  docs_improvement_summary.md  e2e_testing_completion.md  gh_copilot_lsp_integration_docs.md  git_hooks_implementation_complete.md  openai_refactor_analysis.md  phase_2_2_completion_summary.md  phase_2_3_completion.md  pr2-completion-final.md  pr2-conflict-resolution.md  pr2-implementation-audit.md  refactor_completion_summary.md  refactor_plan_comprehensive.md  schema_removal_summary.md  test_performance_plan_step1_complete.md  test_performance_plan_step2_complete.md  test_performance_plan_step3_phase1_complete.md  zed_copilot_model_updates.md  zed_copilot_project_memory.md  zed_copilot_project_summary.md
docs/: CHANGELOG.md  CHAT_ARCHITECTURE.md  CI_CD_IMPLEMENTATION.md  CI_PERFORMANCE_MONITORING.md  CONFIG.md  CONFIGURATION.md  DEVELOPMENT.md  DOCUMENTATION_REVIEW.md  EXAMPLES.md  EXECUTION_SUMMARY.md  GH_COPILOT_LSP_INTEGRATION.md  GIT_HOOKS.md  HTTP_INTEGRATION.md  PHASE2_AUDIT.md  PHASE2_PR_DESCRIPTION.md  PHASE2_TEST_RESULTS.md  PHASE_2_3_SUMMARY.md  PR2-COMPLETION-SUMMARY.md  PROVIDER_INTEGRATION.md  README.md  ROADMAP.md  SETUP.md  TESTING.md  TEST_AUDIT.md  TEST_OPTIMIZATION_CHECKLIST.md  TEST_PERFORMANCE_BASELINE.md  UPDATE_SUMMARY.md  settings.schema.json
docs/archive/: CI_CD_IMPLEMENTATION.md  GIT_HOOKS_IMPLEMENTATION.md  MAKEFILE.md
docs/development/: CONTRIBUTING.md  DEVELOPMENT.md  GIT_HOOKS.md  README.md  ROADMAP.md  TESTING.md  ZED_PANEL_API.md
docs/getting-started/: EXAMPLES.md  QUICKSTART.md  README.md  SETUP.md
docs/plans/: test-performance-optimization-phases-2-4.md
docs/reference/: CONFIG.md  README.md
docs/technical/: ARCHITECTURE_DECISIONS.md  CHAT_ARCHITECTURE.md  GH_COPILOT_LSP_INTEGRATION.md  HTTP_INTEGRATION.md  PROVIDER_INTEGRATION.md  README.md  RETRY_STRATEGY.md
scripts/: download-openai-spec.sh  pre-commit  pre-push  setup-hooks.sh  smart-test.sh
src/: lib.rs
src/chat/: context.rs  mod.rs
src/config/: errors.rs  loader.rs  manager.rs  mod.rs  structs.rs  validator.rs
tests/: README.md  anthropic_e2e.rs  e2e_helpers.rs  integration_tests.rs  openai_e2e.rs
(+22 files in other folders)
