[package]
name = "zed-copilot"
version = "0.0.1"
edition = "2021"
description = "AI-powered code completion and assistance for Zed IDE"
authors = ["Zed Copilot Contributors <copilot@zed.dev>"]
repository = "https://github.com/zed-industries/zed-copilot"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
