[package]
name = "zed-copilot"
version = "0.0.1"
edition = "2021"
description = "AI-powered code completion and assistance for Zed IDE"
authors = ["Zed Copilot Contributors <copilot@zed.dev>"]
repository = "https://github.com/zed-industries/zed-copilot"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-openai = "0.28"
anthropic_rust = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["sync", "macros", "time"] }
wiremock = "0.6"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
